# Autofac-cpp

./: .gitignore  Autofac++.sln  CMakeLists.txt  README.md
DI/: Container.cpp  Container.h  Container.i  ContainerBuilder.cpp  ContainerBuilder.h  ContainerBuilder.i  DI.vcxproj  DI.vcxproj.filters  ServiceFactoryRegisterer.h  ServiceFactoryRegistererImpl.h  ServiceInstanceRegisterer.h  ServiceInstanceRegistererImpl.h  ServiceRegisterer.cpp  ServiceRegisterer.h  ServiceRegisterer.i  ServiceTypeRegisterer.h  ServiceTypeRegistererImpl.h
DI/Details/: AutoManagedServiceResolver.h  CompositeServiceResolver.h  ConstructorTraits.h  FactoryRunner.h  FunctionTraits.h  IndexSequence.h  ManageableServiceRegisterer.h  ServiceAliasRegisterer.h  ServiceAliasRegisterers.cpp  ServiceAliasRegisterers.h  (+25 more)
DIGTest/: ConstServiceTest.cpp  ContainerBaseTest.h  ContainerBuilderUsageTest.cpp  DIGTest.cpp  DIGTest.vcxproj  DIGTest.vcxproj.filters  DummyService.h  ResolveEfficiencyTest.cpp  ResolveRegisteredServiceInstanceByTypeTest.cpp  ResolveRegisteredServiceInstanceTest.cpp  ResolveRegisteredServiceTypeByTypeTest.cpp  ResolveRegisteredServiceTypeTest.cpp  ResolveServiceFromFactoryTest.cpp  ResolveServiceInstanceAsTypeTest.cpp  ResolveServiceInstanceByTypeTest.cpp  ResolveServiceInstanceTest.cpp  ResolveServiceTypeAsSingleInstance.cpp  ResolveServiceTypeAsTypeTest.cpp  ResolveServiceTypeTest.cpp  ResolveStandardServiceInstanceTest.cpp  ResolverServiceTypeWithDependencies.cpp  ServiceCollectionTest.cpp  ServiceFactoryAsSingleInstanceTest.cpp  ServiceFactoryAsTypeTest.cpp  ServiceFactoryTest.cpp  ServiceFactoryWithDependenciesTest.cpp  ServiceFromFactoryTest.cpp  ServiceFromParameterizedFactoryTest.cpp  ServiceInstanceAsTypeTest.cpp  ServiceInstanceTest.cpp  ServiceOverwriteTest.cpp  ServiceTypeAsSingleInstance.cpp  ServiceTypeAsTypeTest.cpp  ServiceTypeTest.cpp  ServiceTypeWithDependencies.cpp  StandardServiceInstanceTest.cpp  StaticAssertTest.cpp
DITest/: BaseContainerTest.cpp  Container.h  ContainerBuilder.h  DITest.vcxproj  DITest.vcxproj.filters  DummyService.h  Error.h  ResolveRegisteredServiceInstanceTest.cpp  ServiceInstanceHolder.h  ServiceInstanceReferenceTypeConverter.h  ServiceInstanceRegisterer.h  ServiceInstanceResolver.h  ServiceInstances.h  ServiceReferenceTypeConverter.h  ServiceRegisterer.h  ServiceResolver.h  ServiceResolvers.h  TypeIndex.h  UnderlyingType.h
(+26 files in other folders)
